--- a/test/Makefile
+++ b/test/Makefile
@@ -3,13 +3,14 @@ CFLAGS += -I.. $(COMMON_CFLAGS)
 LIB := ../libev.a
 EVENT-TEST_OBJS := event-test.o
 AVAHI-TEST_OBJS := avahi.o avahi-test.o
+MINI-TEST-OBJS := mini-test.o
 TS-TEST_OBJS := ts-test.o
 TV-TEST_OBJS := tv-test.o
 ECHO-TEST-OBJS := echo-test.o 
 OBJS = $(EVENT-TEST_OBJS) $(AVAHI-TEST_OBS) $(TS-TEST_OBJS) $(TV-TEST_OBJS) \
-	$(ECHO-TEST-OBJS)
+	$(ECHO-TEST-OBJS) $(MINI-TEST_OBJS)
 
-all:	event-test ts-test tv-test avahi-test echo-test array-mock
+all:	event-test ts-test tv-test avahi-test echo-test array-mock mini-test
 
 event-test:     $(EVENT-TEST_OBJS) $(LIB)
 	$(CC) $(LDFLAGS) -o $@ $^ -lm
@@ -18,6 +19,9 @@ ts-test:    $(TS-TEST_OBJS) $(LIB)
 	$(CC) $(LDFLAGS) -o $@ $^
 
 tv-test:    $(TV-TEST_OBJS) $(LIB)
+	$(CC) $(LDFLAGS) -o $@ $^
+
+mini-test:    $(MINI-TEST-OBJS) $(LIB)
 	$(CC) $(LDFLAGS) -o $@ $^
 
 avahi.o avahi-test.o:	CFLAGS += $(shell pkg-config --cflags avahi-core) -MMD -MP
