Makefiles: generate and link with shared library

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@
 *.d
 cscope.files
 cscope.out
-libev.a
+libminivent.so
 perf.data*
 *.gcno
 *.gcda
 *.gcov
+test/*.o.wrap
 test/*-mock
 test/*-test
