--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 CFLAGS += -I.. $(COMMON_CFLAGS)
+LIBS := -L.. -lminivent
 
-LIB := ../libev.a
+LIB := libev.so
 EVENT-TEST_OBJS := event-test.o
 AVAHI-TEST_OBJS := avahi.o avahi-test.o
 MINI-TEST-OBJS := mini-test.o
@@ -9,28 +10,35 @@ TV-TEST_OBJS := tv-test.o
 ECHO-TEST-OBJS := echo-test.o 
 OBJS = $(EVENT-TEST_OBJS) $(AVAHI-TEST_OBS) $(TS-TEST_OBJS) $(TV-TEST_OBJS) \
 	$(ECHO-TEST-OBJS) $(MINI-TEST_OBJS)
+ALL_TESTS := event-test ts-test tv-test avahi-test echo-test array-mock mini-test
 
-all:	event-test ts-test tv-test avahi-test echo-test array-mock mini-test
+all:	$(ALL_TESTS)
 
-event-test:     $(EVENT-TEST_OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^ -lm
+run:	all
+	@for i in $(ALL_TESTS); do \
+		echo == running $$i == >&2; \
+		LD_LIBRARY_PATH=.. ./$$i; \
+	done
 
-ts-test:    $(TS-TEST_OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^
+event-test:     $(EVENT-TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS) -lm
 
-tv-test:    $(TV-TEST_OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^
+ts-test:    $(TS-TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
-mini-test:    $(MINI-TEST-OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^
+tv-test:    $(TV-TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
+
+mini-test:    $(MINI-TEST-OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 avahi.o avahi-test.o:	CFLAGS += $(shell pkg-config --cflags avahi-core) -MMD -MP
 
-avahi-test:	$(AVAHI-TEST_OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^ $(shell pkg-config --libs avahi-core)
+avahi-test:	$(AVAHI-TEST_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(shell pkg-config --libs avahi-core) $(LIBS)
 
-echo-test:	$(ECHO-TEST-OBJS) $(LIB)
-	$(CC) $(LDFLAGS) -o $@ $^
+echo-test:	$(ECHO-TEST-OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 ts-test.c:	time-test-inc.c time-test.c
 	cat time-test-inc.c >$@
@@ -54,7 +62,7 @@ include $(wildcard $(OBJS:.o=.d))
 # COLON will get expanded during second expansion below
 COLON:=:
 .SECONDEXPANSION:
-%-mock:	%.o %.o.wrap $$($$@_OBJDEPS) $$($$@_TESTDEPS) $$($$@_TESTDEPS$$(COLON).o=.o.wrap) $(LIB) Makefile
+%-mock:	%.o %.o.wrap $$($$@_OBJDEPS) $$($$@_TESTDEPS) $$($$@_TESTDEPS$$(COLON).o=.o.wrap) Makefile
 	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) $< $($@_TESTDEPS) $($@_OBJDEPS) \
-		$(LIB) -lcmocka $($@_LIBDEPS) \
+		$(LIBS) -lcmocka $($@_LIBDEPS) \
 		$(shell cat $<.wrap) $(foreach dep,$($@_TESTDEPS),$(shell cat $(dep).wrap))
