fixup typos in test/Makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -10,7 +10,7 @@ TV-TEST_OBJS := tv-test.o
 ECHO-TEST-OBJS := echo-test.o 
 DGRAM-TEST-OBJS := dgram-test.o 
 OBJS = $(EVENT-TEST_OBJS) $(AVAHI-TEST_OBS) $(TS-TEST_OBJS) $(TV-TEST_OBJS) \
-	$(ECHO-TEST-OBJS) $(DGRAM-TEST-OBJS) $(MINI-TEST_OBJS)
+	$(ECHO-TEST-OBJS) $(DGRAM-TEST-OBJS) $(MINI-TEST-OBJS)
 ALL_TESTS := event-test ts-test tv-test avahi-test echo-test dgram-test array-mock mini-test
 
 all:	$(ALL_TESTS)
