--- a/test/Makefile
+++ b/test/Makefile
@@ -1,14 +1,19 @@
-CFLAGS += -I.. $(COMMON_CFLAGS)
+CFLAGS += -I.. $(patsubst -I%,-I../%,$(INCLUDE)) $(COMMON_CFLAGS)
+# Override this to pull in logging funcionality from somewhere else
+LOG_O ?= ../external/log.o
+CLEANUP_O ?= ../external/cleanup.o
+EXT_OBJS := $(LOG_O) $(CLEANUP_O)
+
 LIBS := -L.. -lminivent
 
 LIB := libev.so
-EVENT-TEST_OBJS := event-test.o
-AVAHI-TEST_OBJS := avahi.o avahi-test.o
-MINI-TEST-OBJS := mini-test.o
-TS-TEST_OBJS := ts-test.o
-TV-TEST_OBJS := tv-test.o
-ECHO-TEST-OBJS := echo-test.o 
-DGRAM-TEST-OBJS := dgram-test.o 
+EVENT-TEST_OBJS := event-test.o $(EXT_OBJS)
+AVAHI-TEST_OBJS := avahi.o avahi-test.o $(EXT_OBJS)
+MINI-TEST-OBJS := mini-test.o $(EXT_OBJS)
+TS-TEST_OBJS := ts-test.o $(EXT_OBJS)
+TV-TEST_OBJS := tv-test.o $(EXT_OBJS)
+ECHO-TEST-OBJS := echo-test.o $(EXT_OBJS)
+DGRAM-TEST-OBJS := dgram-test.o $(EXT_OBJS)
 OBJS = $(EVENT-TEST_OBJS) $(AVAHI-TEST_OBS) $(TS-TEST_OBJS) $(TV-TEST_OBJS) \
 	$(ECHO-TEST-OBJS) $(DGRAM-TEST-OBJS) $(MINI-TEST-OBJS)
 ALL_TESTS := event-test ts-test tv-test avahi-test echo-test dgram-test array-mock mini-test
@@ -67,6 +72,6 @@ include $(wildcard $(OBJS:.o=.d))
 COLON:=:
 .SECONDEXPANSION:
 %-mock:	%.o %.o.wrap $$($$@_OBJDEPS) $$($$@_TESTDEPS) $$($$@_TESTDEPS$$(COLON).o=.o.wrap) Makefile
-	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) $< $($@_TESTDEPS) $($@_OBJDEPS) \
+	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) $< $($@_TESTDEPS) $($@_OBJDEPS) $(EXT_OBJS) \
 		$(LIBS) -lcmocka $($@_LIBDEPS) \
 		$(shell cat $<.wrap) $(foreach dep,$($@_TESTDEPS),$(shell cat $(dep).wrap))
